# niftir

./: .gitignore  COPYING  DESCRIPTION  NAMESPACE  README  cleanup  config.h  config.h.in  config.status  configure  configure.ac  configure.in  komodo_niftir.kpf  mate_niftir.tmproj
R/: big.nifti4d.R  nifti.R  utils.R  zzz.R
R/.svn/: entries
R/.svn/text-base/: aclasses.R.svn-base  big.nifti4d.R.svn-base  header.R.svn-base  mask.R.svn-base  nifti.R.svn-base  utils.R.svn-base
data/: test.rda
data/.svn/: entries
data/.svn/text-base/: test.nii.gz.svn-base
inst/.svn/: entries
inst/doc/.svn/: entries
inst/include/.svn/: entries
inst/include/niftir/: nifti1_io.h  niftir.h  znzlib.h
inst/include/niftir/.svn/: entries
inst/include/niftir/.svn/text-base/: util.h.svn-base  (+3 more)
inst/unitTests/: runit.01.R
inst/unitTests/.svn/: entries
man/: abspath.Rd  as.big.nifti4d-methods.Rd  as.big.nifti4d.Rd  big.nifti4d-class.Rd  do.mask.Rd  ijk2xyz.Rd  nifti-class.Rd  niftir-package.Rd  prepare.mask.Rd  progressbar.Rd  read.nifti.Rd  read.nifti.header.Rd  rmext.Rd  write.nifti-methods.Rd
man/.svn/: entries
man/.svn/text-base/: as.nifti-methods.Rd.svn-base  big.niftiXd-class.Rd.svn-base  coords.Rd.svn-base  create.header.Rd.svn-base  defaults.Rd.svn-base  end.txtProgressBar.Rd.svn-base  header-class.Rd.svn-base  header.Rd.svn-base  indices.Rd.svn-base  mask.Rd.svn-base  nifti.Rd.svn-base  r2z.Rd.svn-base  read.big.nifti4d.Rd.svn-base  unitTests.Rd.svn-base  update.txtProgressBar.Rd.svn-base  write.nifti.Rd.svn-base  z2r.Rd.svn-base
src/: Makevars  Makevars.in  nifti1_io.c  niftir.cpp  znzlib.c
src/.svn/: entries
src/.svn/text-base/: Makevars.in.svn-base  config.h.svn-base  nifti1_io.c.svn-base  niftir.cpp.svn-base  util.c.svn-base  znzlib.c.svn-base
tests/: test_read_bignifti.R
